[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.93" }
itertools = { version = "0.13.0" }
nom = "7.1.3"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
